--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,6 +29,8 @@ layout: default
 
         {{ content }}
 
+        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Europe%2FVienna&showTitle=0&mode=WEEK&src=ZHBmMm1xYmt1NjcxNzI3cDFsYnRpYzc3dDl2Ym1odDhAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%238e24aa" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
         <!-- Home Post List -->
         {% for post in site.posts limit : 5 %}
 
