--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,6 +31,8 @@ layout: default
 
         <h2>Mein Google Kalender</h2>
 
+        <iframe src="https://calendar.google.com/calendar/embed?src=8e7fcf15a59bf7c8ead25631dc03af3ba4c071bb31308f383184cc7021907a14%40group.calendar.google.com&ctz=Europe%2FVienna" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
         <div class="calendar-wrapper">
             <iframe id="myCalendar" 
                     src="https://calendar.google.com/calendar/embed?src=8e7fcf15a59bf7c8ead25631dc03af3ba4c071bb31308f383184cc7021907a14%40group.calendar.google.com&ctz=Europe%2FVienna"
