--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,17 +29,20 @@ layout: default
 
         {{ content }}
 
-        <h2>Mein Google Kalender</h2>
+        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Europe%2FVienna&showTitle=0&mode=WEEK&src=OGU3ZmNmMTVhNTliZjdjOGVhZDI1NjMxZGMwM2FmM2JhNGMwNzFiYjMxMzA4ZjM4MzE4NGNjNzAyMTkwN2ExNEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23d50000" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe> 
 
-        <iframe src="https://calendar.google.com/calendar/embed?src=8e7fcf15a59bf7c8ead25631dc03af3ba4c071bb31308f383184cc7021907a14%40group.calendar.google.com&ctz=Europe%2FVienna" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        <a href="https://www.iatacodes.de/">Hier</a> kannst du nachschlagen, was die IATA Codes bedeuten (z.B. CDG - Paris Charles de Gaulle).
 
+        Und <a href="https://www.flightradar24.com/48.11,16.57/8">hier</a> kannst du mit einer Flugnummer (z.B. OS393) nachschauen, wo der Flieger gerade ist.
+
+        <!-- Funktioniert nicht, vermutlich wegen dynamischer Höhe
         <div class="calendar-wrapper">
             <iframe id="myCalendar" 
                     src="https://calendar.google.com/calendar/embed?src=8e7fcf15a59bf7c8ead25631dc03af3ba4c071bb31308f383184cc7021907a14%40group.calendar.google.com&ctz=Europe%2FVienna"
                     frameborder="0" scrolling="no">
             </iframe>
         </div>
-
+        -->
         
 
         <!-- Home Post List -->
