--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,9 +31,9 @@ layout: default
 
         <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Europe%2FVienna&showTitle=0&mode=WEEK&src=OGU3ZmNmMTVhNTliZjdjOGVhZDI1NjMxZGMwM2FmM2JhNGMwNzFiYjMxMzA4ZjM4MzE4NGNjNzAyMTkwN2ExNEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23d50000" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe> 
 
-        <h4><a href="https://www.iatacodes.de/">Hier</a> kannst du nachschlagen, was die IATA Codes bedeuten (z.B. CDG - Paris Charles de Gaulle).</h4>
+        <p><a href="https://www.iatacodes.de/">Hier</a> kannst du nachschlagen, was die IATA Codes bedeuten (z.B. CDG - Paris Charles de Gaulle).</p>
 
-        <h4>Und <a href="https://www.flightradar24.com/48.11,16.57/8">hier</a> kannst du mit einer Flugnummer (z.B. OS393) nachschauen, wo der Flieger gerade ist.</h4>
+        <p>Und <a href="https://www.flightradar24.com/48.11,16.57/8">hier</a> kannst du mit einer Flugnummer (z.B. OS393) nachschauen, wo der Flieger gerade ist.</p>
 
         <!-- Funktioniert nicht, vermutlich wegen dynamischer Höhe
         <div class="calendar-wrapper">
